welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:36: error: not found: value growSomeFLowers
  growSomeFLowers();
  ^